// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLinkFill renders 1`] = `
<a
  className="sc-eyFZrc cLGsTZ"
/>
`;

exports[`TabLinkFill renders Href 1`] = `
<a
  className="sc-eyFZrc cLGsTZ"
  href="www.google.com"
/>
`;

exports[`TabLinkFill renders count 1`] = `
<a
  className="sc-eyFZrc cLGsTZ"
>
  <span
    className="sc-jEWOvK lhKAtu"
  >
    2
  </span>
</a>
`;

exports[`TabLinkFill renders element left 1`] = `
<a
  className="sc-eyFZrc cLGsTZ"
>
  <div
    className="sc-bCloLd goLcCV"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`TabLinkFill renders isTop 1`] = `
<a
  className="sc-eyFZrc cLGsTZ"
/>
`;

exports[`TabLinkFill renders size 1`] = `
<a
  className="sc-eyFZrc bbTtXH"
  size="small"
/>
`;
